Remove hardcoded list item from HTML and fix form

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,12 @@
             </div>
             <div class="leaderboard__board">
                 <ul class="leaderboard__board--list">
-                    <li class="leaderboard__board--listItem">
-                        <p>Name: 100</p>
-                    </li>
                 </ul>
             </div>
         </section>
         <section class="new">
             <h2 class="new__title">Add your score</h2>
-            <form action="#" method="POST" class="new__form">
+            <form action="#" class="new__form">
                 <ul class="new__form--list">
                     <li class="new__form--listItem">
                         <input type="text" class="new__form--input" placeholder="Your name">
@@ -45,7 +42,5 @@
             </form>
         </section>
     </main>
-
-    
 </body>
 </html>
